openshift/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crm-https
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: platform-class-required
  tls:
    - secretName: crm-tls
      hosts: [demo.example.invalid]
  rules:
    - host: demo.example.invalid
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service: {name: crm-api, port: {name: http}}
          - path: /actuator
            pathType: Prefix
            backend:
              service: {name: crm-api, port: {name: http}}
          - path: /
            pathType: Prefix
            backend:
              service: {name: crm-ui, port: {name: http}}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crm-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: platform-class-required
  rules:
    - host: demo.example.invalid
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: {name: crm-ui, port: {name: http}}
